# FRC_align

./: AUTHORS  CMakeLists.txt  FRC.c  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: pol_fastq.h
scripts/: screen_results.py
src/: FRC.cpp  FRC_align.cpp  FindTranslocations.cpp  Makefile  Makefile.am  Makefile.in  Options.h  common.h
src/data_structures/: Contig.cpp  Contig.h  FRC.cpp  FRC.h  Features.cpp  Features.h  Mask.cpp  Mask.h  Reads.cpp  Reads.h  Translocation.cpp  Translocation.h  Translocations.cpp  Translocations.h
src/io/: Auto_Unzip.cpp  Auto_Unzip.h  Fasta.cpp  Fasta.h  formatting.h  read_functions.cpp  read_functions.h
src/options/: Options.cpp  Options.h  Options_Standard.cpp  Options_Standard.h
